Fix gap Skills

--- a/src/components/Skills/_skills.scss
+++ b/src/components/Skills/_skills.scss
@@ -5,8 +5,8 @@
     padding: 50px 75px;
 
     @media (max-width: 767px) {
-        padding: 30px;
-        gap: 30px;        
+        padding: 32px;
+        gap: 32px;        
     }
 
     h2{
